# electrobun-rust

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  BETA_RELEASE.md  BUILD.md  CLAUDE.md  Cargo.toml  README.md  biome.jsonc  package.json  rustfmt.toml  tsconfig.json
.codegraph/: daemon.pid
.github/: FUNDING.yml
.github/workflows/: bun-check.yml  cef-check.yml  release.yml
__tests__/: README.md
__tests__/fixtures/: core_exports.json  native_exports.json
__tests__/integration/native/: native-ffi-loading.test.ts
apps/kitchen/: electrobun.config.ts  package.json  tsconfig.json
apps/kitchen/src/bun/: index.ts  wgpuTagRenderer.ts
apps/kitchen/src/playgrounds/application-menu/: index.css  index.html  index.ts
apps/kitchen/src/playgrounds/clipboard/: index.css  index.html  index.ts
apps/kitchen/src/playgrounds/context-menu/: index.css  index.html  index.ts
apps/kitchen/src/playgrounds/custom-titlebar/: index.html  index.ts
apps/kitchen/src/playgrounds/draggable/: index.html
apps/kitchen/src/playgrounds/file-dialog/: index.css  index.html  index.ts
apps/kitchen/src/playgrounds/fullsize-frame-repro/: index.html
apps/kitchen/src/playgrounds/host-message/: index.html  index.ts
apps/kitchen/src/playgrounds/multiwindow-cef/: index.html  index.ts
apps/kitchen/src/test-framework/: executor.ts  types.ts
apps/kitchen/src/test-harness/: index.html  index.ts
apps/kitchen/src/test-oopif/: index.html
apps/kitchen/src/test-runner/: index.css  index.html  index.ts  rpc.ts
apps/kitchen/src/tests/: babylon-adapter.test.ts  events.test.ts  index.ts  navigation.test.ts  preload.test.ts  rpc.test.ts  sandbox.test.ts  screen.test.ts  session.test.ts  tray-api.test.ts  updater.test.ts  utils.test.ts  wgpu-adapter-extended.test.ts  wgpu-adapter.test.ts  wgpu-ffi.test.ts  window.test.ts
apps/kitchen/src/zig-view/: index.html
crates/electrobun-build-tools/: Cargo.toml
crates/electrobun-build-tools/src/: asar.rs  lib.rs
crates/electrobun-core/: Cargo.toml
crates/electrobun-core/src/: clipboard.rs  crypto.rs  dialog.rs  display.rs  error.rs  file_ops.rs  lib.rs  notifications.rs  session.rs  shortcuts.rs  transport.rs  tray.rs  types.rs  webview.rs  wgpu.rs  window.rs
crates/electrobun-core/src/api/: mod.rs
crates/electrobun-extractor/: Cargo.toml
crates/electrobun-extractor/src/: main.rs
crates/electrobun-launcher/: Cargo.toml
crates/electrobun-launcher/src/: main.rs  main.ts
crates/electrobun-macros/: Cargo.toml
crates/electrobun-macros/src/: ffi_gen.rs  ipc.rs  lib.rs  stream.rs  ts_gen.rs
crates/electrobun-macros/tests/: eden_ipc_test.rs
doc/: 1.md  2.md  BUILD.md  CEF.md  zig-rust-cross-platform.md  转rust分析.md  项目计划.md
kitchen/src/zig/: main.zig
package/: .npmignore  build.ts  package-lock.json  package.json  tsconfig.json
package/scripts/: gen-embedded.ts  postinstall.ts
package/src/bun/: ElectrobunConfig.ts
package/src/bun/core/: BrowserView.ts  Updater.ts
package/src/bun/proc/: native.ts
package/src/cli/: index.ts
package/src/core/: Cargo.toml
package/src/core/src/: clipboard.rs  crypto.rs  dialog.rs  display.rs  error.rs  file_ops.rs  lib.rs  notifications.rs  session.rs  shortcuts.rs  transport.rs  tray.rs  types.rs  webview.rs  wgpu.rs  window.rs
package/src/extractor/: Cargo.toml  main.rs
package/src/launcher/: Cargo.toml  main.rs
package/src/native/linux/: nativeWrapper.cpp
package/src/native/macos/: nativeWrapper.mm
package/src/native/shared/: callbacks.h
package/src/native/win/: nativeWrapper.cpp
package/src/tools/: Cargo.toml
package/src/tools/src/: asar.rs  lib.rs
templates/angular/: electrobun.config.ts  package.json
templates/angular/src/bun/: index.ts
templates/angular/src/mainview/: tsconfig.app.json
templates/bunny/: electrobun.config.ts  package.json
templates/bunny/src/bun/: index.ts
templates/bunny/src/mainview/: index.ts
templates/hello-world/: electrobun.config.ts  package.json
templates/hello-world/src/bun/: index.ts
templates/multi-window/: electrobun.config.ts  package.json
templates/multi-window/src/bun/: index.ts
templates/multi-window/src/childview/: index.ts
templates/multi-window/src/mainview/: index.ts
templates/multitab-browser/: electrobun.config.ts  llms.txt  package.json
templates/multitab-browser/src/bun/: index.ts  tabManager.ts
templates/multitab-browser/src/mainview/: index.ts
templates/notes-app/: electrobun.config.ts  package.json
templates/notes-app/src/bun/: index.ts
templates/notes-app/src/mainview/: index.ts
templates/photo-booth/: electrobun.config.ts  package.json
templates/photo-booth/src/bun/: index.ts
templates/photo-booth/src/mainview/: index.ts
templates/react-tailwind-vite/: README.md  electrobun.config.ts  package.json
templates/react-tailwind-vite/src/bun/: index.ts
templates/solid/: electrobun.config.ts  package.json
templates/solid/src/bun/: index.ts
templates/sqlite-crud/: electrobun.config.ts  package.json
templates/sqlite-crud/src/bun/: index.ts
templates/sqlite-crud/src/mainview/: index.ts
templates/svelte/: README.md  electrobun.config.ts  package.json
templates/svelte/src/bun/: index.ts
templates/tailwind-vanilla/: electrobun.config.ts  package.json
templates/tailwind-vanilla/src/bun/: index.ts
templates/tray-app/: electrobun.config.ts  package.json
templates/tray-app/src/bun/: index.ts
templates/vanilla-vite/: electrobun.config.ts  package.json
templates/vanilla-vite/src/bun/: index.ts
templates/vue/: electrobun.config.ts  package.json
templates/vue/src/bun/: index.ts
templates/wgpu/: electrobun.config.ts  package.json
templates/wgpu-babylon/: electrobun.config.ts  package.json
templates/wgpu-babylon/src/bun/: index.ts
templates/wgpu-mlp/: electrobun.config.ts  package.json
templates/wgpu-mlp/src/bun/: index.ts
templates/wgpu-mlp/src/mainview/: index.ts
templates/wgpu-threejs/: electrobun.config.ts  package.json
templates/wgpu-threejs/src/bun/: index.ts
templates/wgpu-threejs/src/mainview/: index.ts
templates/wgpu/src/bun/: index.ts
(+66 files in other folders)
