[package]
name = "electrobun-build-tools"
version = "0.1.0"
edition = "2021"
description = "Electrobun 构建和运行时工具集 — ASAR, bsdiff/bspatch, zstd"

[lints]
workspace = true

[[bin]]
name = "rust-asar"
path = "src/bin/asar.rs"

[[bin]]
name = "bsdiff"
path = "src/bin/bsdiff.rs"

[[bin]]
name = "bspatch"
path = "src/bin/bspatch.rs"

[[bin]]
name = "rust-zstd"
path = "src/bin/zstd.rs"

[lib]
name = "asar"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = { version = "0.13", features = ["zstdmt"] }
walkdir = "2"
glob = "0.3"
bsdiff = "0.2.1"
libc = "0.2"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
