[package]
name = "electrobun-core"
version = "0.1.0"
edition = "2021"
description = "Electrobun core FFI library - Cross-platform window & webview"
license = "MIT"

[lints]
workspace = true

[lib]
name = "electrobun_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# FFI
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
aes-gcm = "0.10"
sha1 = "0.11.0"
base64 = "0.22.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Lazy static
lazy_static = "1.4"

# Threading & channels
parking_lot = "0.12"

# Window management - winit
winit = "0.30"

# WebView - wry (for Tauri-style webview)
wry = "0.55.1"

# Raw window handle
raw-window-handle = "0.6"

# Clipboard
arboard = "3.2"

# Native file dialogs
rfd = "0.17.2"

# Desktop notifications
notify-rust = "4.10"

# Global shortcuts
global-hotkey = "0.8.0"

# Open file/URL in system handler
open = "5.1"

# PNG encoding/decoding for clipboard images
png = "0.18.1"

# Move files to trash
trash = "5.1"

# WGPU (GPU compute/rendering)
wgpu = "29.0.3"
pollster = "0.4"

# WebSocket server for host transport
websocket = "0.27"

# Logging
tracing = { workspace = true }

# Macros
electrobun-macros = { path = "../electrobun-macros" }

# Async runtime
tokio = { workspace = true }
futures = "0.3"
rand = "0.10.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_DataExchange",
] }

[features]
default = []
# Enable webview feature when wry is available
webview = []
