[package]
name = "electrobun-core"
version = "0.1.0"
edition = "2021"
description = "Electrobun core FFI library - Cross-platform window & webview"
license = "MIT"

[lib]
name = "electrobun_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# FFI
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Crypto
aes-gcm = "0.10"
sha1 = "0.11.0"
base64 = "0.22.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Lazy static
lazy_static = "1.4"

# Threading & channels
parking_lot = "0.12"

# Window management - winit
winit = "0.30"

# WebView - wry (for Tauri-style webview)
wry = "0.55.1"

# Raw window handle
raw-window-handle = "0.6"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
# Enable webview feature when wry is available
webview = []

[profile.release]
strip = true
lto = true
codegen-units = 1
