[package]
name = "electrobun-extractor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "extractor"
path = "main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
memchr = "2.5"
base64 = "0.21"

[build-dependencies]

[profile.release]
strip = true
lto = true
codegen-units = 1
